--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.11.1",
     "formik": "^2.4.5",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
@@ -19,6 +21,7 @@
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
