--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
